# champi_robot_ros

./: .gitignore  README.md  TODO-Etienne.md  apt-requirements.txt  requirements.txt
champi_bringup/: CMakeLists.txt  package.xml
champi_bringup/config/: champi.config.yaml  ldlidar.yaml  ukf.yaml
champi_bringup/config/rviz/: config.rviz  vision.rviz
champi_bringup/launch/: base.launch.py  bringup.launch.py  bringup_base.launch.py  bringup_nav.launch.py  camera_perception.launch.py  ldlidar.launch.py  ldlidar_with_mgr.launch.py  lidar_perception.launch.py  nav.launch.py  sensors.launch.py  teleop.launch.py
champi_controllers/: CMakeLists.txt  package.xml
champi_controllers/config/: base_controller.yaml
champi_controllers/include/champi_controllers/: DataStructures.h  ModbusRegister.h  hw_interface.h  modbus_registers.h
champi_controllers/launch/: act_controller.launch.py  base_controller.launch.py  hardware_interface.launch.py  imu_controller.launch.py
champi_controllers/src/: ModbusRegister.cpp  actuators_controller_node.cpp  base_controller_node.cpp  hardware_interface_node.cpp  hw_core.cpp  hw_events.cpp  hw_interface_node.cpp  hw_loop.cpp  hw_setup.cpp  imu_controller_node.cpp
champi_description/: CMakeLists.txt  package.xml
champi_description/controllers/: controllers_arm.yaml
champi_description/launch/: broadcast_description.launch.py  open_manipulator_x.launch.py  test_dynamixel.launch.py
champi_description/log/: latest_list
champi_description/urdf/: arm_description.urdf.xacro  champi.urdf
champi_hw_interface/: CMakeLists.txt  package.xml
champi_hw_interface/champi_hw_interface/: actuators_commands.py
champi_hw_interface/include/champi_hw_interface/: DataStructures.h  ModbusRegister.h  hw_actuators.h  hw_interface.h
champi_hw_interface/launch/: hardware_interface.launch.py
champi_hw_interface/src/: ModbusRegister.cpp  hw_core.cpp  hw_events.cpp  hw_interface_node.cpp  hw_setup.cpp
champi_interfaces/: CMakeLists.txt  package.xml
champi_interfaces/action/: Navigate.action
champi_interfaces/msg/: ChampiPath.msg  ChampiPoint.msg  ChampiPose.msg  ChampiSegment.msg  CtrlGoal.msg  STMState.msg
champi_isaac_simu/: CMakeLists.txt  package.xml
champi_isaac_simu/scripts/: kaya_drive.py
champi_libraries/: CMakeLists.txt  package.xml
champi_libraries/include/champi_can/: can_ids.hpp  can_interface.hpp  champi_can.hpp  message_recomposer.hpp  msgs_can.pb.h  nanopb.pb.h  pb_common.h  pb_decode.h  pb_encode.h
champi_libraries/src/: test_can_node.cpp
champi_libraries/src/champi_can/: msgs_can.pb.cc  nanopb.pb.cc
champi_nav2/: CMakeLists.txt  package.xml  plugins.xml
champi_nav2/config/: lattice05m.json  nav2_params.yaml  nav2_params_fast.yaml  nav2_params_tests.yaml  nav2_params_tests_smoothers_planners.yaml  nav2_params_theta_star.yaml
champi_nav2/config/behavior_trees/: navigate_to_pose_original.xml  navigate_to_pose_smoother.xml
champi_nav2/config/map/: map_test.yaml
champi_nav2/config/maps/: map.yaml
champi_nav2/config/rviz/: config_nav2_default.rviz
champi_nav2/include/champi_nav2_plugins/: angle_smooher.hpp  drive_on_heading_omni.hpp  obstacle_layer_custom.hpp
champi_nav2/launch/: bringup_launch.py  navigation_launch.py
champi_nav2/src/: angle_smoother.cpp  drive_on_heading_omni.cpp  obstacle_layer_custom.cpp
champi_navigation/: CMakeLists.txt  Readme.md  package.xml
champi_navigation/champi_navigation/: Readme.md  avoidance.py  cmd_vel_updaters.py  costmap_astar.py  goal_checker.py  gui.py  gui_node.py  gui_v2.py  kinematic_models.py  math_bind.py  path_follow_params.py  path_helper.py  path_planner.py  pid.py  planning_feedback.py  pose_control.py  previous_navigation_node.py  rviz_img_displayer.py  trapezoidal_velocity_profile.py  utils.py  world_state.py
champi_navigation/champi_navigation/old_path_planner/: avoidance.py  trajectory.py
champi_navigation/config/rviz/: config.rviz
champi_navigation/include/: icp_pcl.hpp
champi_navigation/launch/: control_pose_simu.launch.py
champi_navigation/scripts/: 1.xyz  2.xyz  Path.py  a_star_path_planner.py  absolute_loc_node.py  absolute_loc_node_py.py  circle_detector.py  costmap_updater.py  costmap_updater_node.py  enums.py  gui_node.py  icp.py  icp_lib.py  loc_node.py  nav_node.py  path_controller.py  path_planner_node.py  path_planner_ui_node.py  planner_node.py  pose_control_node.py  pose_controller_node.py  position_readjustment_node.py  robot_stopped_detector_node.py  rviz_displayer.py  test.py
champi_navigation/src/: absolute_loc_node.cpp
champi_navigation/tests/: unit_tests.py
champi_tools/: CMakeLists.txt  package.xml
champi_tools/scripts/: holo_teleop_joy_node.py
champi_vision/: CMakeLists.txt  Readme.md  package.xml
champi_vision/champi_vision/: aruco_localizer.py  aruco_tests.py  bird_view.py
champi_vision/launch/: raspi_cam.launch.py  visual_loc.launch.py
champi_vision/msg/: GlobalVisionState.msg
champi_vision/scripts/: aruco_loc_node.py  aruco_localizer_node.py  bird_view_publisher_node.py  board_platform_detection_node.py  camera_info_publisher_node.py  cv2_camera_publisher_node.py  enemy_tracker_node.py  global_vision_publisher_node.py  platform_detection_node.py  template_matching_loc_node.py  visual_loc_node.py
champi_vision/src/: enemy_detection_node.cpp
champi_web_ui/: CMakeLists.txt  Readme.md  package.xml
dev_tools/: CMakeLists.txt  average_imu.py  goals_cmd copy.py  goals_cmd.py  log_imu.py  package.xml  setup.cfg  setup.py
dev_tools/champi_visual_loc/: cv2_camera_publisher.py
dev_tools/dev_tools/: camera_info_publisher.py  holo_teleop_joy.py
dev_tools/launch/: bringup.launch.py  simple_base_teleop_joy.launch.py
dev_tools/scripts/: calibration_rayons_robot.py  call_set_pose.py  cv2_camera_publisher_node.py  holo_base_control_dummy_node.py  holo_base_control_simu_node.py  holo_teleop_joy_node.py  holomohation.py  homologation.py  pid_move.py  pub_goal_rviz.py  pub_path.py  simu_lidar_node.py  test_goal_node.py  test_markers.py
dev_tools/src/: fun_node.cpp  simple_holo_base_control_node.cpp  test_diag.cpp
(+362 files in other folders)
