<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>champi_bringup</name>
  <version>0.0.0</version>
  <description>*Mushrooms awake*</description>
  <maintainer email="andrerusso02@gmail.com">arusso</maintainer>
  <license>Driving license for regular mushroom-fueled vehicles.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>twist_mux</exec_depend>
  <exec_depend>joy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
