<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>champi_hw_interface</name>
  <version>0.0.0</version>
  <description>Micellium.</description>
  <maintainer email="andrerusso02@gmail.com">arusso</maintainer>
  <license>Driving license for regular mushroom-fueled vehicles.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    <depend>diagnostic_updater</depend>
    <depend>champi_libraries_cpp</depend>
    <depend>libmodbus-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
