<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>champi_tools</name>
  <version>0.0.0</version>
  <description>A basket full of not-really-pretty mushrooms (they can be usefull sometimes)</description>
  <maintainer email="andrerusso02@gmail.com">andrerusso02</maintainer>
  <license>Driving license for regular mushroom-fueled vehicles.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>champi_libraries_cpp</depend>
  <depend>joy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
